vlib/v/parser/tests/invalid_recursive_struct2_err.out
vlib/v/parser/tests/invalid_recursive_struct2_err.vv:5:8: error: invalid recursive struct `Human`
    3 | }
    4 |
    5 | struct Human {
      |        ~~~~~
    6 |     child Child
    7 | }