vlib/v/parser/tests/invalid_recursive_struct2_err.vv
struct Child {
	be Human
}

struct Human {
	child Child
}
